# aoc-2022

./: .clang-format  CMakeLists.txt
cmake/: dependencies.cmake
src/: CMakeLists.txt  main.cpp
src/day-1/: CMakeLists.txt  README.md  puzzle.cpp  puzzle.h  puzzle_test.cpp
src/day-11/: CMakeLists.txt  README.md  puzzle.cpp  puzzle_test.cpp
src/day-2/: CMakeLists.txt  README.md  puzzle.cpp  puzzle.h  puzzle_test.cpp
src/day-3/: CMakeLists.txt  README.md  puzzle.cpp  puzzle.h  puzzle_test.cpp
src/day-4/: CMakeLists.txt  README.md  puzzle.cpp  puzzle.h  puzzle_test.cpp
src/day-5/: CMakeLists.txt  README.md  puzzle.cpp  puzzle.h  puzzle_test.cpp
src/day-5/testdata/: input.txt
src/day-6/: CMakeLists.txt  README.md  puzzle.cpp  puzzle.h  puzzle_test.cpp
src/day-7/: CMakeLists.txt  README.md  puzzle.cpp  puzzle.h  puzzle_test.cpp
src/day-8/: CMakeLists.txt  README.md  puzzle.cpp  puzzle_test.cpp
